# crew-support-tickets

./: .gitignore  README.md  crewai_kb.csv  docs_kb.json  knowledge-prep-hubspot.py  knowledge-prep-oss-docs.py  pyproject.toml
db/: chroma.sqlite3
knowledge-prep/: hubspot-knowledge-base-export-empty-2025-01-03.csv
src/ticket_classification_and_response_automation/: crew.py  main.py
src/ticket_classification_and_response_automation/config/: agents.yaml  tasks.yaml
src/ticket_classification_and_response_automation/tools/: hubspot_tickets_tool.py
